MyBookings mapping and login fix

--- a/src/main/resources/templates/availability_results.html
+++ b/src/main/resources/templates/availability_results.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" th:href="@{/styles.css}" />
 </head>
 <body class="container">
+  <th:block th:replace="~{fragments :: appHeader}"></th:block>
   <div class="page">
 
     <th:block th:replace="~{fragments :: site_header}"></th:block>
