--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body class="container">
+  <th:block th:replace="~{fragments :: appHeader}"></th:block>
   <div class="page">
 
     <!-- Use our shared header fragment (NOT _header.css/_header.script) -->
