--- a/src/main/resources/templates/booking_detail.html
+++ b/src/main/resources/templates/booking_detail.html
@@ -10,6 +10,7 @@
   </style>
 </head>
 <body class="container">
+  <th:block th:replace="~{fragments :: appHeader}"></th:block>
   <div class="page">
     <th:block th:replace="~{fragments :: site_header}"></th:block>
 
